@@ -17,8 +17,6 @@ Backlog {
 	* Models
 		* Material mapType range checks.
 		* Mesh bone weight management?
-	* CBuffer
-		* Swap endianess.
 
 	* Textures
 		* Try making atlas packer with stbrp_pack_rects.
